fix krpano not centered

--- a/client/css/app.scss
+++ b/client/css/app.scss
@@ -45,10 +45,8 @@ body.popup-open:after {
   width: 50%;
   height: 50%;
   position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -25%;
-  margin-left: -25%;
+  top: 25%;
+  left: 25%;
   background-color: #fff;
   border-radius: 5px;
   text-align: center;
